company 페이지 css 적용 완료함
- 추가 버튼 클릭시 모달이 보이고, 모달의 회색부분 클릭시 모달이 사라짐.

--- a/public/components/atoms/Button/_button.scss
+++ b/public/components/atoms/Button/_button.scss
@@ -1,1 +1,26 @@
-@use "../../../scss/components/button" as button;
+@use "../../../scss/components/button";
+@use "../../../scss/abstracts/mixins" as mixins;
+@use "../../../scss/abstracts/variables" as va;
+
+.small-button {
+  @include mixins.button-base;
+
+  background-color: va.$blue-color;
+
+  width: 80px;
+  height: 40px;
+
+  aspect-ratio: 3/1;
+
+  &:hover {
+    background-color: darken($color: va.$blue-color, $amount: 10%);
+  }
+
+  &:active {
+    background-color: lighten($color: va.$blue-color, $amount: 10%);
+  }
+}
+
+.small-button-text {
+  font-size: 1rem;
+}
