--- a/public/components/organisms/Modal/add-company-modal/add-company-modal.html
+++ b/public/components/organisms/Modal/add-company-modal/add-company-modal.html
@@ -1,29 +1,22 @@
-<div class="modal-background">
-  <div class="modal-container">
-    <!-- title -->
-    <div
-      id="title-company-info"
-      class="company-info-title-container component-container"
-      data-component-url="/components/molecules/page-title/page-title.html"></div>
-
-    <!-- input -->
-    <div
-      id="placeholder-company-name"
-      class="company-name-container component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <!-- input -->
-    <div
-      id="placeholder-company-access-token"
-      class="company-access-token-container component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <!-- input -->
-    <div
-      id="placeholder-company-note"
-      class="company-note-container component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <div
-      id="add-button"
-      class="company-add-button-container component-container"
-      data-component-url="/components/atoms/Button/button.html"></div>
-  </div>
+<div class="modal-container">
+  <!-- title -->
+  <div
+    id="title-company-info"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/molecules/page-title/page-title.html"></div>
+  <!-- input -->
+  <div
+    id="placeholder-company-name"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
+  <!-- input -->
+  <div
+    id="placeholder-company-note"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/molecules/textarea/textarea.html"></div>
+  <!-- 추가 버튼 -->
+  <div
+    id="add-button"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/atoms/Button/button.html"></div>
 </div>
