--- a/public/scss/components/_modal.scss
+++ b/public/scss/components/_modal.scss
@@ -1,19 +1,29 @@
 @use "../abstracts/variables" as va;
 
-.modal-background {
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  background-color: rgba($color: va.$gray-color, $alpha: 0.5);
-  z-index: -1;
+  /* 반투명 어두운 배경 */
+  background: rgba(0, 0, 0, 0.5);
+
+  /* Flexbox로 내부를 중앙 정렬 */
+  display: flex;
+  justify-content: center; /* 가로 중앙 */
+  align-items: center; /* 세로 중앙 */
+
+  /* 모달이 열리지 않은 상태에서 화면 상호작용을 막기 위해 */
+  z-index: 1000;
 }
 
 .modal-container {
   width: 80%;
-  height: 80%;
+
+  max-height: 770px;
+  max-width: 650px;
 
   display: inline;
   justify-content: center;
@@ -21,4 +31,12 @@
 
   border-radius: va.$border-radius;
   background-color: white;
+
+  padding: 20px 30px;
+  overflow-y: auto; /* 내용이 많으면 내부 스크롤 */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
