--- a/public/components/atoms/Label/_label.scss
+++ b/public/components/atoms/Label/_label.scss
@@ -1,1 +1,17 @@
 @use "../../../scss/components/label";
+@use "../../../scss/abstracts/variables" as va;
+
+.label-div {
+  z-index: 5000;
+  border-radius: va.$border-radius;
+  width: auto;
+  height: auto;
+  padding: 0.25rem 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+
+  align-items: center;
+  justify-content: center;
+
+  background-color: va.$yellow-color;
+}
