--- a/public/components/organisms/Modal/add-company-modal/_add-company-modal.scss
+++ b/public/components/organisms/Modal/add-company-modal/_add-company-modal.scss
@@ -1,22 +1,8 @@
-@use "../../molecules/labeled-input/labeled-input";
-@use "../../molecules/page-title/page-title";
-@use "../../atoms/Button/button";
+@use "../../../molecules/placeholder-input/placeholder-input";
+@use "../../../molecules/page-title/page-title";
+@use "../../../atoms/Button/button";
+@use "../../../../scss/components/modal";
+@use "../../../molecules/textarea/textarea";
 
-@use "../../../scss/abstracts/variables" as va;
+@use "../../../../scss/abstracts/variables" as va;
 
-.background {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background-color: va.$gray-color;
-}
-.modal-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
