--- a/public/components/organisms/Modal/add-product-modal/_add-product-modal.scss
+++ b/public/components/organisms/Modal/add-product-modal/_add-product-modal.scss
@@ -26,7 +26,9 @@
 
 .modal-container {
   width: 80%;
-  height: 80%;
+
+  max-height: 770px;
+  max-width: 650px;
 
   display: flex;
   justify-content: center;
