--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,7 @@
   outline: none;
   width: 85%;
   height: 80%;
+  padding: 0 15px;
   color: #292e1e;
   font-size: 1.5rem;
 }
@@ -49,9 +50,7 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
-  aspect-ratio: 5;
-  max-width: 800px;
-  min-width: 250px;
+  aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
   border-radius: 22px;
@@ -75,31 +74,6 @@
   background-color: #948b89;
   cursor: not-allowed;
   pointer-events: none;
-}
-.button.small {
-  width: 30%;
-  max-width: 400px;
-  min-width: 150px;
-}
-.button.--red {
-  background-color: #f97068;
-  color: #fafffd;
-}
-.button.--red:hover {
-  background-color: #f74237;
-}
-.button.--red:active {
-  background-color: #fb9e99;
-}
-.button.--yellow {
-  background-color: #f9dc5c;
-  color: #292e1e;
-}
-.button.--yellow:hover {
-  background-color: #f7d12b;
-}
-.button.--yellow:active {
-  background-color: #fbe78d;
 }
 
 .button-text {
@@ -135,24 +109,37 @@
   src: url("/fonts/SUITE-Regular.woff2") format("woff2");
 }
 
-.modal-background {
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  /* 반투명 어두운 배경 */
+  background: rgba(0, 0, 0, 0.5);
+  /* Flexbox로 내부를 중앙 정렬 */
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(148, 139, 137, 0.5);
-  z-index: -1;
+  justify-content: center; /* 가로 중앙 */
+  align-items: center; /* 세로 중앙 */
+  /* 모달이 열리지 않은 상태에서 화면 상호작용을 막기 위해 */
+  z-index: 1000;
 }
 
 .modal-container {
   width: 80%;
-  height: 80%;
+  max-height: 770px;
+  max-width: 650px;
   display: inline;
   justify-content: center;
   align-items: center;
   border-radius: 22px;
   background-color: white;
+  padding: 20px 30px;
+  overflow-y: auto; /* 내용이 많으면 내부 스크롤 */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.modal-container::-webkit-scrollbar {
+  display: none;
 }
 
 html,
@@ -198,4 +185,8 @@ footer {
 
 .component-container {
   width: auto;
+}
+
+.margin-container {
+  margin: 50px 0;
 }/*# sourceMappingURL=main.css.map */
