company 쪽 모달 보강
- 업체 정보 모달 적용 및 수정 버튼을 눌러 업체 모달이 뜨도록 기능 추가
- 업체 추가, 업체 수정 모달을 핸드폰 화면크기에서도 잘리는곳 없이 잘 나오도록 수정

- 상품 모달 적용중

--- a/public/components/organisms/Modal/add-company-modal/add-company-modal.html
+++ b/public/components/organisms/Modal/add-company-modal/add-company-modal.html
@@ -1,7 +1,7 @@
 <div class="modal-container">
   <!-- title -->
   <div
-    id="title-company-info"
+    id="title-add-company"
     class="component-container flex-container margin-container"
     data-component-url="/components/molecules/page-title/page-title.html"></div>
   <!-- input -->
