--- a/public/components/atoms/Button/_button.scss
+++ b/public/components/atoms/Button/_button.scss
@@ -10,8 +10,6 @@
   width: 80px;
   height: 40px;
 
-  aspect-ratio: 3/1;
-
   &:hover {
     background-color: darken($color: va.$blue-color, $amount: 10%);
   }
@@ -23,4 +21,25 @@
 
 .small-button-text {
   font-size: 1rem;
+}
+
+.delete-button {
+  @include mixins.button-base;
+
+  background-color: white;
+  border: va.$border;
+  border-color: va.$red-color;
+
+  &:hover {
+    background-color: darken($color: white, $amount: 10%);
+    // box-shadow: va.$box-shadow;
+  }
+
+  &:active {
+    background-color: lighten($color: white, $amount: 10%);
+  }
+}
+
+.delete-button-text {
+  color: va.$black-color;
 }
