--- a/public/components/organisms/Header/_header.scss
+++ b/public/components/organisms/Header/_header.scss
@@ -18,6 +18,8 @@
     #ddefbb,
     #ffeeee
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border-radius: 6px;
 }
 
 .header-span {
