--- a/public/components/organisms/Modal/add-product-modal/_add-product-modal.scss
+++ b/public/components/organisms/Modal/add-product-modal/_add-product-modal.scss
@@ -1,39 +1,7 @@
-@use "../../molecules/page-title/page-title";
-@use "../../molecules/dropdown/dropdown";
-@use "../../molecules/labeled-input/labeled-input";
-@use "../../atoms/Button/button";
+@use "../../../molecules/page-title/page-title";
+@use "../../../molecules/dropdown/dropdown";
+@use "../../../molecules/placeholder-input/placeholder-input";
+@use "../../../atoms/Button/button";
+@use "../../../../scss/components/modal";
 
-@use "../../../scss/abstracts/variables" as va;
-
-.add-modal-container {
-  width: 100%;
-  height: 100%;
-
-  background-color: va.$gray-color;
-  opacity: 0.5;
-}
-
-.modal-background {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background-color: rgba($color: va.$gray-color, $alpha: 0.5);
-  z-index: -1;
-}
-
-.modal-container {
-  width: 80%;
-
-  max-height: 770px;
-  max-width: 650px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border-radius: va.$border-radius;
-  background-color: white;
-}
+@use "../../../../scss/abstracts/variables" as va;
