--- a/public/components/organisms/Modal/add-product-modal/add-product-modal.html
+++ b/public/components/organisms/Modal/add-product-modal/add-product-modal.html
@@ -1,26 +1,22 @@
-<div class="modal-background">
-  <div class="modal-container">
-    <!-- title -->
-    <div
-      id="title-add-product"
-      class="page-title-container component-container"
-      data-component-url="/components/molecules/page-title/page-title.html"></div>
-
-    <!-- dropdown -->
-    <div
-      id="placeholder-choice-product-name"
-      class="dropdown-container component-container"
-      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
-    <!-- input -->
-    <div
-      id="placeholder-product-name"
-      class="input-container component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-
-    <!-- add button -->
-    <div
-      id="add-button"
-      class="button-container component-container"
-      data-component-url="/components/atoms/Button/button.html"></div>
-  </div>
+<div class="modal-container">
+  <!-- title -->
+  <div
+    id="title-add-product"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/molecules/page-title/page-title.html"></div>
+  <!-- input 제품 이름-->
+  <div
+    id="placeholder-company-name"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
+  <!-- dropdown 업체 이름 -->
+  <div
+    id="placeholder-choice-company"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/molecules/dropdown/dropdown.html"></div>
+  <!-- 추가 버튼 -->
+  <div
+    id="add-button"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/atoms/Button/button.html"></div>
 </div>
