--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -32,20 +32,18 @@ footer {
   text-align: center;
 }
 
+input,
+button,
+th {
+  @include mixins.font-face("SUITE", "SUITE-Regular.woff2", 400, "woff2");
+  font-family: "SUITE", sans-serif;
+  font-weight: 400;
+}
+
 .flex-container {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.add-modal-container {
-  width: 100%;
-  height: 100%;
-
-  background-color: va.$gray-color;
-  opacity: 0.5;
-
-  z-index: 6000;
 }
 
 .component-container {
