product 페이지의 상품 추가 모달 UI 보강
- 아직 미흡하지만 마무리함.

--- a/public/components/organisms/Modal/add-product-modal/_add-product-modal.scss
+++ b/public/components/organisms/Modal/add-product-modal/_add-product-modal.scss
@@ -5,3 +5,11 @@
 @use "../../../../scss/components/modal";
 
 @use "../../../../scss/abstracts/variables" as va;
+
+.dropdown {
+  width: 100%;
+}
+
+.dropdown-container {
+    width: va.$big-width;
+}
