product 페이지에 상품 수정 모달 추가
- ui는 완성하였으나 api동작 및 모달 보여주는 로직은 확인 못해봄.

--- a/public/components/organisms/Modal/modify-product-modal/modify-product-modal.html
+++ b/public/components/organisms/Modal/modify-product-modal/modify-product-modal.html
@@ -1,30 +1,30 @@
 <div class="modal-container">
   <!-- title -->
   <div
-    id="title-company-info"
+    id="title-product-info"
     class="component-container flex-container margin-container"
     data-component-url="/components/molecules/page-title/page-title.html"></div>
-  <!-- input -->
+  <!-- input 제품 이름-->
   <div
-    id="placeholder-company-name"
+    id="placeholder-product-name"
     class="component-container flex-container margin-container"
     data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
-  <!-- input -->
+  <!-- dropdown 업체 이름 -->
   <div
-    id="placeholder-company-note"
+    id="placeholder-choice-company"
     class="component-container flex-container margin-container"
-    data-component-url="/components/molecules/textarea/textarea.html"></div>
+    data-component-url="/components/molecules/dropdown/dropdown.html"></div>
 
   <div class="flex-container button-container margin-container">
-    <!-- 삭제 버튼 -->
+    <!-- 추가 버튼 -->
     <div
       id="delete-button"
-      class="component-container flex-container "
+      class="component-container flex-container"
       data-component-url="/components/atoms/Button/delete-button.html"></div>
     <!-- 추가 버튼 -->
     <div
       id="modify-button"
-      class="component-container flex-container "
+      class="component-container flex-container"
       data-component-url="/components/atoms/Button/button.html"></div>
   </div>
 </div>
