--- a/public/components/organisms/edit-returned-product/edit-returned-product.html
+++ b/public/components/organisms/edit-returned-product/edit-returned-product.html
@@ -1,26 +1,26 @@
 <div
   id="placeholder-choice-product-name"
-  class="dropdown-container component-container"
+  class="dropdown-container component-container flex-container"
   data-component-url="/components/molecules/dropdown/dropdown.html"></div>
-<div>
+<div class="flex-container">
   <div
     id="label-returned-quantity"
-    class="label-container component-container"
+    class="label-container component-container flex-container"
     data-component-url="/components/atoms/Label/label.html"></div>
   <div
     class="number-spinner-container component-container"
     data-component-url="/components/molecules/number-spinner/number-spinner.html"></div>
 </div>
-<div>
+<div class="flex-container">
   <div
     id="label-resalable-quantity"
-    class="label-container component-container"
+    class="label-container component-container flex-container"
     data-component-url="/components/atoms/Label/label.html"></div>
   <div
-    class="number-spinner-container component-container"
+    class="number-spinner-container component-container flex-container"
     data-component-url="/components/molecules/number-spinner/number-spinner.html"></div>
 </div>
 <div
   id="placeholder-note"
-  class="component-container"
-  data-component-url="/components/atoms/Input/input.html"></div>
+  class="component-container flex-container"
+  data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
