--- a/public/components/molecules/labeled-image/labeled-image.html
+++ b/public/components/molecules/labeled-image/labeled-image.html
@@ -13,7 +13,7 @@
     style="display: none" />
   <!-- label-div -->
   <div
-    class="component-container"
+    class="component-container image-label"
     data-component-url="/components/atoms/Label/label.html"></div>
   <!-- button: 이미지 제거 -->
   <div
