--- a/public/components/molecules/labeled-input/_labeled-input.scss
+++ b/public/components/molecules/labeled-input/_labeled-input.scss
@@ -7,6 +7,8 @@
   align-items: center;
   justify-content: left;
 
+  background-color: white;
+
   border: va.$border;
   border-radius: va.$border-radius;
 
