--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,8 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
