--- a/public/pages/save-invoice/save-invoice.scss
+++ b/public/pages/save-invoice/save-invoice.scss
@@ -7,6 +7,7 @@
 @use "../../components/organisms/Modal/modify-product-modal/modify-product-modal";
 @use "../../components/molecules/number-spinner/number-spinner";
 @use "../../components/molecules/placeholder-input/placeholder-input";
+@use "../../components/organisms/edit-returned-product/edit-returned-product";
 
 @use "../../scss/abstracts/variables" as va;
 
@@ -19,4 +20,43 @@
 
   display: flex;
   justify-content: center;
+}
+
+.labeled-input {
+  .label {
+    font-size: 1rem;
+  }
+  .label-div {
+    min-width: 92px;
+  }
+}
+
+@media (max-width: 640px) {
+  .page-title-container {
+    h1 {
+      font-size: 2rem;
+    }
+  }
+
+  .labeled-input {
+    .label-div {
+      margin-right: 0;
+    }
+    .label {
+      font-size: 1rem;
+      margin: auto;
+    }
+    .component-container {
+      width: 40%;
+    }
+  }
+
+  .labeled-image {
+    .label {
+      font-size: 1rem;
+    }
+    .label-div {
+      width: 50%;
+    }
+  }
 }
