--- a/public/pages/company/company.css
+++ b/public/pages/company/company.css
@@ -21,6 +21,8 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
@@ -71,6 +73,8 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
@@ -101,6 +105,8 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
@@ -141,7 +147,6 @@
 }
 
 .label-div {
-  z-index: 5000;
   border-radius: 22px;
   width: auto;
   height: auto;
@@ -151,6 +156,9 @@
   align-items: center;
   justify-content: center;
   background-color: #f9dc5c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .image {
@@ -204,6 +212,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
   position: relative;
   border: 2px solid #948b89;
   border-radius: 22px;
@@ -321,6 +330,11 @@
   background-color: white;
 }
 
+@media (max-width: 640px) {
+  .header-span {
+    font-size: 2rem;
+  }
+}
 .input {
   font-family: "SUITE", sans-serif;
   font-weight: 400;
@@ -449,11 +463,20 @@
   src: url("/fonts/SUITE-SemiBold.woff2") format("woff2");
 }
 
+.dropdown-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
 .dropdown {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   position: relative;
   outline: 2px solid #292e1e;
@@ -470,6 +493,11 @@
 }
 .dropdown.red {
   outline-color: #f97068;
+}
+@media (max-width: 430px) {
+  .dropdown .dropdown-label {
+    font-size: 1.5rem;
+  }
 }
 
 .dropdown-button {
@@ -544,6 +572,9 @@ ul li {
   max-height: 600px;
   overflow-y: auto;
   margin-top: 10px;
+  position: absolute;
+  top: 100%;
+  left: 0;
   background-color: #fafffd;
   border-radius: 22px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
