--- a/public/pages/save-invoice/save-invoice.css
+++ b/public/pages/save-invoice/save-invoice.css
@@ -21,6 +21,8 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
@@ -71,6 +73,8 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
@@ -101,6 +105,8 @@
   font-family: "SUITE", sans-serif;
   text-align: center;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   color: #292e1e;
   padding: 0.5rem 1.5rem;
@@ -141,7 +147,6 @@
 }
 
 .label-div {
-  z-index: 5000;
   border-radius: 22px;
   width: auto;
   height: auto;
@@ -151,6 +156,9 @@
   align-items: center;
   justify-content: center;
   background-color: #f9dc5c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .image {
@@ -204,6 +212,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
   position: relative;
   border: 2px solid #948b89;
   border-radius: 22px;
@@ -267,6 +276,7 @@
   display: flex;
   align-items: center;
   justify-content: left;
+  background-color: white;
   border: 2px solid #948b89;
   border-radius: 22px;
   width: 75%;
@@ -380,11 +390,25 @@
   background-color: white;
 }
 
+@media (max-width: 640px) {
+  .header-span {
+    font-size: 2rem;
+  }
+}
+.dropdown-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
 .dropdown {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
   width: 75%;
+  max-width: 800px;
+  min-width: 250px;
   aspect-ratio: 5/1;
   position: relative;
   outline: 2px solid #292e1e;
@@ -401,6 +425,11 @@
 }
 .dropdown.red {
   outline-color: #f97068;
+}
+@media (max-width: 430px) {
+  .dropdown .dropdown-label {
+    font-size: 1.5rem;
+  }
 }
 
 .dropdown-button {
@@ -475,6 +504,9 @@ ul li {
   max-height: 600px;
   overflow-y: auto;
   margin-top: 10px;
+  position: absolute;
+  top: 100%;
+  left: 0;
   background-color: #fafffd;
   border-radius: 22px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -716,6 +748,60 @@ input[type=number] {
   src: url("/fonts/SUITE-ExtraBold.woff2") format("woff2");
 }
 
+.product-edit-container {
+  background-color: white;
+  border: 2px solid #948b89;
+  border-radius: 22px;
+  border-color: #f9dc5c;
+  padding: 20px;
+  width: 70%;
+  min-width: 435px;
+}
+.product-edit-container .dropdown .dropdown-label {
+  font-size: 1.5rem;
+}
+.product-edit-container .number-container {
+  width: 75%;
+}
+.product-edit-container .number-container .spinner-container {
+  width: 50%;
+}
+.product-edit-container .number-container .label-div {
+  width: 50%;
+}
+.product-edit-container .container1 {
+  width: 50%;
+}
+.product-edit-container .container2 {
+  width: 50%;
+}
+
+.number-container {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.margin-top20 {
+  margin-top: 20px;
+}
+
+@media (max-width: 640px) {
+  .product-edit-container {
+    width: 95%;
+  }
+  .product-edit-container .dropdown .dropdown-label {
+    font-size: 1.25rem;
+  }
+  .product-edit-container .spinner-input {
+    font-size: 1.25rem;
+  }
+  .product-edit-container .number-container .spinner-container {
+    width: 90%;
+  }
+  .product-edit-container .number-container .label-div {
+    width: 70%;
+  }
+}
 .dropdown {
   width: 75%;
 }
@@ -724,4 +810,33 @@ input[type=number] {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.labeled-input .label {
+  font-size: 1rem;
+}
+.labeled-input .label-div {
+  min-width: 92px;
+}
+
+@media (max-width: 640px) {
+  .page-title-container h1 {
+    font-size: 2rem;
+  }
+  .labeled-input .label-div {
+    margin-right: 0;
+  }
+  .labeled-input .label {
+    font-size: 1rem;
+    margin: auto;
+  }
+  .labeled-input .component-container {
+    width: 40%;
+  }
+  .labeled-image .label {
+    font-size: 1rem;
+  }
+  .labeled-image .label-div {
+    width: 50%;
+  }
 }/*# sourceMappingURL=save-invoice.css.map */
