상품 페이지 api 일부 연결
- 상품 목록 리스트

- 상품 수정모달

--- a/public/components/organisms/Modal/modify-product-modal/_modify-product-modal.scss
+++ b/public/components/organisms/Modal/modify-product-modal/_modify-product-modal.scss
@@ -1,18 +1,18 @@
 @use "../../../molecules/page-title/page-title";
-@use "../../../molecules/dropdown/dropdown";
+// @use "../../../molecules/dropdown/dropdown";
 @use "../../../atoms/Button/button";
 @use "../../../molecules/placeholder-input/placeholder-input";
 @use "../../../../scss/components/modal";
 
 @use "../../../../scss/abstracts/variables" as va;
 
-.dropdown {
-  width: 100%;
-}
+// .dropdown {
+//   width: 100%;
+// }
 
-.dropdown-container {
-  width: va.$big-width;
-}
+// .dropdown-container {
+//   width: va.$big-width;
+// }
 
 .button-container {
   width: 100%;
