--- a/public/components/organisms/Modal/modify-product-modal/modify-product-modal.html
+++ b/public/components/organisms/Modal/modify-product-modal/modify-product-modal.html
@@ -4,16 +4,21 @@
     id="title-product-info"
     class="component-container flex-container margin-container"
     data-component-url="/components/molecules/page-title/page-title.html"></div>
+
+  <span
+    id="product-id"
+    class="hidden"></span>
   <!-- input 제품 이름-->
   <div
     id="placeholder-product-name"
     class="component-container flex-container margin-container"
     data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
-  <!-- dropdown 업체 이름 -->
-  <div
+  <!-- dropdown 업체 이름 -> api 모시깽 때문에 제거함. 혹시 몰라 주석만 -->
+
+  <!-- <div
     id="placeholder-choice-company"
     class="component-container flex-container margin-container"
-    data-component-url="/components/molecules/dropdown/dropdown.html"></div>
+    data-component-url="/components/molecules/dropdown/dropdown.html"></div> -->
 
   <div class="flex-container button-container margin-container">
     <!-- 추가 버튼 -->
