company 페이지 기능 보강
- 삭제, 수정, 추가 기능 추가함.

--- a/public/components/organisms/Modal/modify-company-modal/modify-company-modal.html
+++ b/public/components/organisms/Modal/modify-company-modal/modify-company-modal.html
@@ -4,12 +4,23 @@
     id="title-company-info"
     class="component-container flex-container margin-container"
     data-component-url="/components/molecules/page-title/page-title.html"></div>
-  <!-- input -->
+  <!-- 회사 아이디 -->
+  <span
+    id="company-id"
+    class="hidden"></span>
+
+  <!-- 회사명 -->
   <div
     id="placeholder-company-name"
     class="component-container flex-container margin-container"
     data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
-  <!-- input -->
+
+  <!-- 엑세스 토큰 -->
+  <div
+    id="placeholder-company-access-token"
+    class="component-container flex-container margin-container"
+    data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
+  <!-- 비고 -->
   <div
     id="placeholder-company-note"
     class="component-container flex-container margin-container"
@@ -19,12 +30,12 @@
     <!-- 삭제 버튼 -->
     <div
       id="delete-button"
-      class="component-container flex-container "
+      class="component-container flex-container"
       data-component-url="/components/atoms/Button/delete-button.html"></div>
     <!-- 추가 버튼 -->
     <div
       id="modify-button"
-      class="component-container flex-container "
+      class="component-container flex-container"
       data-component-url="/components/atoms/Button/button.html"></div>
   </div>
 </div>
