드롭다운 컴포넌트 수정
- 상품이나 업체의 id를 저장할 span 추가함

--- a/public/components/molecules/dropdown/dropdown.html
+++ b/public/components/molecules/dropdown/dropdown.html
@@ -13,10 +13,8 @@
 
   <ul class="dropdown-contents hidden">
     <li class="dropdown-item">
+      <span class="hidden"></span>
       <span class="dropdown-label">Item 1</span>
-    </li>
-    <li class="dropdown-item">
-      <span class="dropdown-label">Item 2</span>
     </li>
   </ul>
 </div>
