product 페이지 api 연결
- 삭제, 수정, 추가 기능 연결

- 추가 모달에 회사명 드롭다운 불러오는 기능 추가

--- a/public/components/molecules/dropdown/dropdown.html
+++ b/public/components/molecules/dropdown/dropdown.html
@@ -1,6 +1,11 @@
 <div class="dropdown-container">
   <div class="dropdown">
     <button class="dropdown-button">
+      <span
+        id="item-id"
+        class="hidden"
+        >-1</span
+      >
       <span class="dropdown-label component-label"></span>
       <div
         class="dropdown-img"
@@ -11,10 +16,5 @@
     </button>
   </div>
 
-  <ul class="dropdown-contents hidden">
-    <li class="dropdown-item">
-      <span class="hidden"></span>
-      <span class="dropdown-label">Item 1</span>
-    </li>
-  </ul>
+  <ul class="dropdown-contents hidden"></ul>
 </div>
