--- a/public/components/molecules/placeholder-input/placeholder-input.html
+++ b/public/components/molecules/placeholder-input/placeholder-input.html
@@ -1,5 +1,6 @@
 <div class="placeholder-input">
   <input
     class="input component-label placeholder"
-    placeholder="" />
+    placeholder=""
+    name="placeholder-input" />
 </div>
