invoice 페이지에 기능 연결 중
- 상품 드롭박스에 아이템 불러오도록 기능 구현

- 송장번호, 고객이름, 고객전화에 데이터 채워지도록 기능 구현

- imaged-label 컴포넌트가 두개 있으면 파일 탐색기가 두번열리며, 사진적용이 제대로 안되고 삭제 버튼이 제대로 동작하지 않는 현상 수정

- 상품 정보 컴포넌트에 삭제 버튼 추가. (버튼의 기능은 아직 미구현)

- 메모란이 placeholder-input 컴포넌트로 되어있어서 textsarea 컴포넌트로 교체함

- 모바일 화면에서 글자크기가 너무 크게나와 적당히 줄임.

--- a/public/components/molecules/delete-button/_delete-button.scss
+++ b/public/components/molecules/delete-button/_delete-button.scss
@@ -11,7 +11,9 @@
 
   border-radius: 50%;
 
-  transition: border-color va.$transition box-shadow va.$transition;
+  transition:
+    border-color va.$transition,
+    box-shadow va.$transition;
 
   &.focused {
     box-shadow: va.$box-shadow;
