--- a/public/components/molecules/placeholder-input/_placeholder-input.scss
+++ b/public/components/molecules/placeholder-input/_placeholder-input.scss
@@ -17,8 +17,10 @@
   max-width: va.$big-max-width;
   min-width: va.$big-min-width;
 
-  transition: border-color va.$transition border-width va.$transition box-shadow
-    va.$transition;
+  transition:
+    border-color va.$transition,
+    border-width va.$transition,
+    box-shadow va.$transition;
 
   &:focus-within {
     border-color: va.$input-focus-border-color;
