--- a/public/components/organisms/edit-returned-product/edit-returned-product.html
+++ b/public/components/organisms/edit-returned-product/edit-returned-product.html
@@ -35,5 +35,11 @@
   <div
     id="placeholder-note"
     class="component-container flex-container margin-top20"
-    data-component-url="/components/molecules/placeholder-input/placeholder-input.html"></div>
+    data-component-url="/components/molecules/textarea/textarea.html"></div>
+
+  <!-- button: 상품 에딧 제거 -->
+  <div
+    id="cancel-button"
+    class="component-container"
+    data-component-url="/components/molecules/delete-button/delete-button.html"></div>
 </div>
