--- a/public/components/molecules/textarea/textarea.html
+++ b/public/components/molecules/textarea/textarea.html
@@ -1,5 +1,6 @@
 <div class="textarea-div">
   <textarea
+    name="메모"
     placeholder=""
     class="component-label placeholder textarea"
     rows="4"></textarea>
