--- a/public/components/organisms/edit-returned-product/_edit-returned-product.scss
+++ b/public/components/organisms/edit-returned-product/_edit-returned-product.scss
@@ -1,11 +1,14 @@
 @use "../../molecules/dropdown/dropdown";
 @use "../../atoms/Label/label";
 @use "../../molecules/number-spinner/number-spinner";
-@use "../../molecules/placeholder-input/placeholder-input";
+@use "../../molecules/textarea/textarea";
+@use "../../molecules/delete-button/delete-button";
 
 @use "../../../scss/abstracts/variables" as va;
 
 .product-edit-container {
+  position: relative;
+
   background-color: white;
 
   border: va.$border;
@@ -24,13 +27,19 @@
 
   .number-container {
     width: va.$big-width;
+    margin: 0 auto;
 
     .spinner-container {
       width: 50%;
     }
+
     .label-div {
       width: 50%;
     }
+  }
+
+  .margin-top20 {
+    margin-top: 20px;
   }
 
   .container1 {
@@ -39,19 +48,16 @@
   .container2 {
     width: 50%;
   }
-}
 
-.number-container {
-  width: va.$big-width;
-  margin: 0 auto;
-}
-
-.margin-top20 {
-  margin-top: 20px;
+  .delete-button-container {
+    width: 15%;
+    left: 90%;
+  }
 }
 
 @media (max-width: 640px) {
   .product-edit-container {
+    min-width: 0;
     width: 95%;
 
     .dropdown {
@@ -65,12 +71,21 @@
     }
 
     .number-container {
+      width: 90%;
       .spinner-container {
         width: 90%;
       }
       .label-div {
         width: 70%;
+        .label {
+          font-size: 1rem;
+        }
       }
+    }
+
+    .delete-button-container {
+      width: 15%;
+      left: 87%;
     }
   }
 }
