--- a/public/pages/company/company.css
+++ b/public/pages/company/company.css
@@ -178,7 +178,7 @@
   left: 85%;
   top: -5%;
   border-radius: 50%;
-  transition: border-color 0.2s ease-in-out box-shadow 0.2s ease-in-out;
+  transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 .delete-button-container.focused {
   box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
@@ -244,6 +244,11 @@
   display: none;
 }
 
+@media (max-width: 640px) {
+  .labeled-image {
+    width: 75%;
+  }
+}
 .page-title-container {
   display: flex;
   justify-content: center;
@@ -308,6 +313,8 @@
   background-size: contain;
   width: 120px;
   aspect-ratio: 1;
+  margin: 15px;
+  margin-left: 0px;
 }
 
 .hamburger-menu {
@@ -323,12 +330,11 @@
   border: none;
   width: 100px;
   aspect-ratio: 1;
-  transition: box-shadow 0.2s ease-in-out background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
 }
 .hamburger-menu:hover {
   cursor: pointer;
-  box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 640px) {
@@ -376,7 +382,7 @@
   aspect-ratio: 7/1;
   max-width: 800px;
   min-width: 250px;
-  transition: border-color 0.2s ease-in-out border-width 0.2s ease-in-out box-shadow 0.2s ease-in-out;
+  transition: border-color 0.2s ease-in-out, border-width 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 .placeholder-input:focus-within {
   border-color: #3423a6;
@@ -437,7 +443,7 @@
   aspect-ratio: 2/1;
   max-width: 800px;
   min-width: 250px;
-  transition: border-color 0.2s ease-in-out border-width 0.2s ease-in-out box-shadow 0.2s ease-in-out;
+  transition: border-color 0.2s ease-in-out, border-width 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 .textarea-div:focus-within {
   border-color: #3423a6;
@@ -586,6 +592,11 @@ ul li {
 }
 .dropdown-contents.hidden {
   display: none;
+}
+@media (max-width: 430px) {
+  .dropdown-contents .dropdown-label {
+    font-size: 1.5rem;
+  }
 }
 
 .dropdown-item {
