--- a/public/pages/invoice-chart/invoice-chart.css
+++ b/public/pages/invoice-chart/invoice-chart.css
@@ -53,6 +53,8 @@
   background-size: contain;
   width: 120px;
   aspect-ratio: 1;
+  margin: 15px;
+  margin-left: 0px;
 }
 
 .hamburger-menu {
@@ -68,12 +70,11 @@
   border: none;
   width: 100px;
   aspect-ratio: 1;
-  transition: box-shadow 0.2s ease-in-out background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
 }
 .hamburger-menu:hover {
   cursor: pointer;
-  box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 640px) {
