--- a/public/pages/save-invoice/save-invoice.css
+++ b/public/pages/save-invoice/save-invoice.css
@@ -178,7 +178,7 @@
   left: 85%;
   top: -5%;
   border-radius: 50%;
-  transition: border-color 0.2s ease-in-out box-shadow 0.2s ease-in-out;
+  transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 .delete-button-container.focused {
   box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
@@ -244,6 +244,11 @@
   display: none;
 }
 
+@media (max-width: 640px) {
+  .labeled-image {
+    width: 75%;
+  }
+}
 .input {
   font-family: "SUITE", sans-serif;
   font-weight: 400;
@@ -284,7 +289,7 @@
   aspect-ratio: 7/1;
   max-width: 800px;
   min-width: 250px;
-  transition: border-color 0.2s ease-in-out border-width 0.2s ease-in-out box-shadow 0.2s ease-in-out;
+  transition: border-color 0.2s ease-in-out, border-width 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 .labeled-input:focus-within {
   border-color: #3423a6;
@@ -304,6 +309,11 @@
   border-radius: 22px;
 }
 
+@media (max-width: 640px) {
+  .labeled-input .input {
+    font-size: 1rem;
+  }
+}
 .page-title-container {
   display: flex;
   justify-content: center;
@@ -368,6 +378,8 @@
   background-size: contain;
   width: 120px;
   aspect-ratio: 1;
+  margin: 15px;
+  margin-left: 0px;
 }
 
 .hamburger-menu {
@@ -383,12 +395,11 @@
   border: none;
   width: 100px;
   aspect-ratio: 1;
-  transition: box-shadow 0.2s ease-in-out background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
 }
 .hamburger-menu:hover {
   cursor: pointer;
-  box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 640px) {
@@ -516,6 +527,11 @@ ul li {
 .dropdown-contents.hidden {
   display: none;
 }
+@media (max-width: 430px) {
+  .dropdown-contents .dropdown-label {
+    font-size: 1.5rem;
+  }
+}
 
 .dropdown-item {
   padding: 0;
@@ -559,7 +575,7 @@ ul li {
   aspect-ratio: 7/1;
   max-width: 800px;
   min-width: 250px;
-  transition: border-color 0.2s ease-in-out border-width 0.2s ease-in-out box-shadow 0.2s ease-in-out;
+  transition: border-color 0.2s ease-in-out, border-width 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 .placeholder-input:focus-within {
   border-color: #3423a6;
@@ -744,7 +760,47 @@ input[type=number] {
   src: url("/fonts/SUITE-ExtraBold.woff2") format("woff2");
 }
 
+.textarea-div {
+  overflow: hidden;
+  border: 2px solid #948b89;
+  border-radius: 22px;
+  padding: 10px;
+  width: 75%;
+  aspect-ratio: 2/1;
+  max-width: 800px;
+  min-width: 250px;
+  transition: border-color 0.2s ease-in-out, border-width 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+.textarea-div:focus-within {
+  border-color: #3423a6;
+  box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
+  border-width: 2px;
+}
+.textarea-div.error {
+  border-color: #f97068;
+  box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
+}
+.textarea-div.disabled {
+  border-color: #948b89;
+  pointer-events: none;
+}
+
+.textarea {
+  font-weight: 400;
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+}
+@font-face {
+  font-family: "SUITE";
+  font-weight: 400;
+  src: url("/fonts/SUITE-SemiBold.woff2") format("woff2");
+}
+
 .product-edit-container {
+  position: relative;
   background-color: white;
   border: 2px solid #948b89;
   border-radius: 22px;
@@ -758,6 +814,7 @@ input[type=number] {
 }
 .product-edit-container .number-container {
   width: 75%;
+  margin: 0 auto;
 }
 .product-edit-container .number-container .spinner-container {
   width: 50%;
@@ -765,24 +822,23 @@ input[type=number] {
 .product-edit-container .number-container .label-div {
   width: 50%;
 }
+.product-edit-container .margin-top20 {
+  margin-top: 20px;
+}
 .product-edit-container .container1 {
   width: 50%;
 }
 .product-edit-container .container2 {
   width: 50%;
 }
-
-.number-container {
-  width: 75%;
-  margin: 0 auto;
-}
-
-.margin-top20 {
-  margin-top: 20px;
+.product-edit-container .delete-button-container {
+  width: 15%;
+  left: 90%;
 }
 
 @media (max-width: 640px) {
   .product-edit-container {
+    min-width: 0;
     width: 95%;
   }
   .product-edit-container .dropdown .dropdown-label {
@@ -791,11 +847,21 @@ input[type=number] {
   .product-edit-container .spinner-input {
     font-size: 1.25rem;
   }
+  .product-edit-container .number-container {
+    width: 90%;
+  }
   .product-edit-container .number-container .spinner-container {
     width: 90%;
   }
   .product-edit-container .number-container .label-div {
     width: 70%;
+  }
+  .product-edit-container .number-container .label-div .label {
+    font-size: 1rem;
+  }
+  .product-edit-container .delete-button-container {
+    width: 15%;
+    left: 87%;
   }
 }
 .dropdown {
