textarea 컴포넌트 폰트사이즈 키움
- 모바일 화면에선 작게 나오게하고, 큼 화면에선 크게 나오게 수정

--- a/public/pages/company/company.css
+++ b/public/pages/company/company.css
@@ -461,6 +461,7 @@
 
 .textarea {
   font-weight: 400;
+  font-size: 1.5rem;
   width: 100%;
   height: 100%;
   border: none;
@@ -471,6 +472,11 @@
   font-family: "SUITE";
   font-weight: 400;
   src: url("/fonts/SUITE-SemiBold.woff2") format("woff2");
+}
+@media (max-width: 430px) {
+  .textarea {
+    font-size: 1rem;
+  }
 }
 
 .dropdown-container {
