--- a/public/components/molecules/textarea/_textarea.scss
+++ b/public/components/molecules/textarea/_textarea.scss
@@ -38,6 +38,11 @@
 .textarea {
   @include mixins.font-face("SUITE", "SUITE-SemiBold.woff2", 400, "woff2");
   font-weight: 400;
+  font-size: 1.5rem;
+
+  @media (max-width: 430px) {
+    font-size: 1rem;
+  }
 
   width: 100%;
   height: 100%;
