invoice 퍼이지 보강
- 페이지 로드시에도 회사 드롭박스에 회사 설정되도록 기능 추가함

- 상품에 연결된 회사랑 선택된 회사가 다르면 회사 드롭박스에 빨간줄 뜨도록 기능 추가

--- a/public/components/molecules/dropdown/dropdown.html
+++ b/public/components/molecules/dropdown/dropdown.html
@@ -2,7 +2,12 @@
   <div class="dropdown">
     <button class="dropdown-button">
       <span
-        id="item-id"
+        id="company-id"
+        class="hidden"
+        >-1</span
+      >
+      <span
+        id="product-id"
         class="hidden"
         >-1</span
       >
