invoice 페이지 기능 보강
- DB에 저장하는 기능 구현 (api 쪽 오류가 있어 테스트 못해봄)

- 제품 사진을 선택하거나 제거하면 session storage에 base64 image로 저장했다가 제거하도록 구현.

- api에 이미지 데이터 넣을 때는 blob로 변환해서 저장함.

--- a/public/components/organisms/edit-returned-product/edit-returned-product.html
+++ b/public/components/organisms/edit-returned-product/edit-returned-product.html
@@ -6,7 +6,9 @@
     data-component-url="/components/molecules/dropdown/dropdown.html"></div>
 
   <!-- 입고수량 컨테이너 -->
-  <div class="flex-container number-container margin-top20">
+  <div
+    id="spinner-1"
+    class="flex-container number-container margin-top20">
     <!-- 라벨 -->
     <div
       id="label-returned-quantity"
@@ -19,7 +21,9 @@
   </div>
 
   <!-- 상품화가능 수량 컨테이너 -->
-  <div class="flex-container number-container margin-top20">
+  <div
+    id="spinner-2"
+    class="flex-container number-container margin-top20">
     <!-- 라벨 -->
     <div
       id="label-resalable-quantity"
