minor fix for prod

--- a/public/components/organisms/Footer/footer.html
+++ b/public/components/organisms/Footer/footer.html
@@ -7,7 +7,7 @@
       <div class="flex items-center mb-6 md:mb-0">
         <!-- src 경로 수정해야함 -->
         <img
-          src="http://158.247.211.41:5000/images/app-icon.png"
+          src="/images/app-icon.png"
           alt="앱아이콘"
           class="h-10 w-10 rounded-lg" />
         <span class="ml-3 text-xl font-semibold text-black"
